# Antigravity_test

./: .gitignore  README.md  client_1060605959840-0bbrdem82hpufeij1fr3be9v3vn5olbl.apps.googleusercontent.com.plist  database.db  privacy-policy.html  pyproject.toml  render.yaml  run.ps1
.github/workflows/: build_ios.yml  keep_alive.yml  play_store_deploy.yml
backend/: ai_service.py  auth.py  config.py  database.py  main.py  models.py  notifications.py
frontend/: package-lock.json  package.json
frontend/public/: terms-and-conditions.html
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: TeamView.tsx
mobile_app/: .gitignore  analyze.txt  pubspec.yaml
mobile_app/android/app/: build.gradle.kts
mobile_app/android/app/src/main/: AndroidManifest.xml
mobile_app/android/app/src/main/kotlin/com/rahma/aismartodo/: MainActivity.kt
mobile_app/ios/Runner/: Info.plist
mobile_app/ios/Runner.xcodeproj/: project.pbxproj
mobile_app/lib/: config.dart  main.dart
mobile_app/lib/models/: task.model.dart  user.model.dart
mobile_app/lib/providers/: theme_provider.dart
mobile_app/lib/screens/: dashboard_screen.dart  login_screen.dart
mobile_app/lib/screens/tabs/: analytics_tab.dart  board_tab.dart  profile_tab.dart  team_tab.dart
mobile_app/lib/services/: api_service.dart  notification_service.dart
mobile_app/macos/Flutter/: GeneratedPluginRegistrant.swift
mobile_app/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
