[project]
name = "antigravity-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.40.0",
    "psycopg2-binary>=2.9.10",
    "authlib>=1.6.6",
    "python-jose[cryptography]>=3.5.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.22",
    "cloudinary>=1.44.1",
    "google-auth>=2.47.0",
    "requests>=2.32.5",
    "google-genai>=1.0.0",
]
